--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h2>NISHAT ALAM</h2>
       </div>
       <div class="designation">
-        <h3>WEB DEVELOPER</h3>
+        <h3>Full Stack Developer</h3>
       </div>
       <div class="bottom-group">
         <button onclick="openModal()" class="btn-share btn-card">
